# EVCM

./: .pre-commit-config.yaml  CODEOWNERS  DISCLAIMER.md  DOCS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: hassfest.yml  lint.yml  test.yml  validate.yml
custom_components/: config_flow.py  const.py  controller.py  number.py  priority.py  strings.json
custom_components/EVCM/: __init__.py  config_flow.py  const.py  controller.py  datetime.py  manifest.json  number.py  priority.py  strings.json  switch.py
custom_components/EVCM/translations/: en.json
custom_components/evcm/: __init__.py  config_flow.py  const.py  controller.py  datetime.py  manifest.json  number.py  priority.py  select.py  sensor.py  switch.py
custom_components/evcm/translations/: en.json
docs/: README.md  testreadme.md
